# vado

./: run-windows.sh  stack.yaml  vado.cabal
.github/actions/hs-setup/: action.yaml
.github/workflows/: build.yaml
app/: Main.hs
src/: Vado.hs
src/Vado/: CSS.hs  Document.hs  Layout.hs  Resource.hs  Types.hs
test/: TODO.htm  VadoSpec.hs  code.htm  hello.htm  image404.htm  images.htm  layout-divs.htm  layout-list.htm  tables.htm  text-styling.htm  todo.htm
test/Vado/: CSSSpec.hs  DocumentSpec.hs
test/html/: TODO.htm  charset-cp1251.html  charset-utf8-cyr.html  css-position.htm  hello-css.htm  hello.htm  html-escaping.htm  html-no-body.htm  image-data.htm  image-sized.htm  images.htm  inputs.htm  layout-boxes.htm  layout-divs.htm  layout-margins.htm  text-styling.htm
test/html/res/: plain.txt  simple.css
