name:                vado
version:             0.0.0
synopsis:            Web browser
description:         Web browser
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2017 Chris Done
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable vado
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  default-language:    Haskell2010
  build-depends:       attoparsec
                     , base
                     , bytestring
                     , cairo
                     , containers
                     , dom-selector
                     , html-conduit
                     , http-client
                     , http-client-tls
                     , http-types
                     , linear
                     , mtl
                     , network-uri
                     , rosezipper
                     , sdl2
                     , sdl2-cairo
                     , sdl2-image
                     , text
                     , unordered-containers
                     , xml-conduit
