name:                vado
version:             0.0.1
synopsis:            Web browser
description:         Web browser
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2017 Chris Done
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Vado
      Vado.CSS
      Vado.Resource
      Vado.Types
  other-modules:       Paths_vado
  ghc-options:         -Wall
  default-language:    Haskell2010
  build-depends:       attoparsec
                     , base
                     , base64-bytestring
                     , bytestring
                     , cairo
                     , containers
                     , css-text
                     , html-conduit
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , http-types
                     , linear
                     , mtl
                     , network-uri
                     , rosezipper
                     , sdl2
                     , sdl2-cairo
                     , sdl2-image
                     , text
                     , unordered-containers
                     , xml-conduit
                     , conduit
                     , resourcet
                     , stm
                     , stm-conduit
                     , xml-types

executable vado
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  other-modules:       Paths_vado
  default-language:    Haskell2010
  build-depends:
      vado
    , base

test-suite vado-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:
      VadoSpec
    , Vado.CSSSpec
    , Paths_vado
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      vado
    , base
    , containers
    , hspec
    , raw-strings-qq
    , text
